Bug 1969549 Maroon export view styling
Added in new template to reflect different markup for Maroon
pageheader. Corrected the footer styling to ultilise existing
styles and have better contrast.

Also fixed center alignment of collection nav dropdown to now
align left. And removed hidden overflow so longer dropdown lists
won't be cut off by the bottom slant in pageheader.

behatnotneeded

--- a/htdocs/theme/raw/sass/form/_dropdown.scss
+++ b/htdocs/theme/raw/sass/form/_dropdown.scss
@@ -7,6 +7,7 @@
         min-width: 1.25rem; // 20px;
         max-width: 100%;
         border-radius: $input-border-radius;
+        text-align: left;
 
         &.input-short {
             max-width: 12.5rem; // 200px;
