--- a/htdocs/theme/raw/sass/layout/_footer.scss
+++ b/htdocs/theme/raw/sass/layout/_footer.scss
@@ -28,6 +28,10 @@
     }
     .metadata {
         color: $site-footer-color;
+        a {
+            color: $site-footer-color;
+            text-decoration: underline;
+        }
     }
     .footer-inner {
         @extend .clearfix;
